syntax = "proto3";
package sixprotocol.nftmngr;

option go_package = "github.com/thesixnetwork/six-protocol/x/nftmngr/types";

message NFTSchemaByContract {
  string originContractAddress = 1;
  repeated string schemaCodes = 2;
}
